# rv1106_example

RKiveTest/: CMakeLists.txt  build.sh  main.cpp
rv1106_PaddleOcr/quickVersion/PPOCR-Det/model/: ppocrv3.onnx  ppocrv3_det.rknn
rv1106_PaddleOcr/quickVersion/PPOCR-Det/python/: convert.py  ppocr_det.py  ppocr_dets.py
rv1106_PaddleOcr/quickVersion/PPOCR-Rec/model/: dataset.txt
rv1106_PaddleOcr/quickVersion/PPOCR-Rec/python/: convert.py  ppocr_rec.py
rv1106_PaddleOcr/quickVersion/PPOCR-System/model/: dataset.txt  ppocrv3_det.rknn
rv1106_PaddleOcr/quickVersion/PPOCR-System/python/: ppocr_det.py  ppocr_rec.py  ppocr_system.py
rv1106_ocr/: CMakeLists.txt  build.sh  main.cpp
rv1106_ocr/include/: AngleNet.h  CrnnNet.h  DbNet.h
rv1106_ocr/ncnn/include/ncnn/: platform.h
rv1106_ocr/ncnn/lib/cmake/ncnn/: ncnn.cmake
rv1106_ocr/opencv-mobile-4.12.0-luckfox-pico/include/opencv4/opencv2/: core.hpp  cvconfig.h  imgproc.hpp
rv1106_ocr/opencv-mobile-4.12.0-luckfox-pico/include/opencv4/opencv2/core/: cvdef.h  mat.hpp  mat.inl.hpp
rv1106_ocr/opencv-mobile-4.12.0-luckfox-pico/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules.cmake
rv1106_ocr/src/: OcrUtils.cpp
wk_Gray_scale_matching/: CMakeLists.txt  OpencvNCCMatch.cpp  OpencvNCCMatch.h  main.cpp
